<resources>
    <string name="app_name">Gamr.io</string>
    <string name="title_game_detail">Game Detail</string>
    <string name="game_description">Description of the game</string>
    <string name="game_header">Game header image</string>
    <string name="search_hint">Search games</string>
    <string name="search_title">Search games</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string-array name="pref_themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_themes_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <!-- Settings for text color -->
    <string name="pref_title_text_color">Text color</string>
    <string-array name="pref_text_colors">
        <item>Black</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="pref_text_colors_values">
        <item>black</item>
        <item>red</item>
        <item>yellow</item>
    </string-array>

    <!-- Settings for text size -->
    <string name="pref_title_text_size">Text size</string>

    <string-array name="pref_text_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="pref_text_size_values">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

    <string name="pref_header_tic_tac_toe">Tic Tac Toe</string>
    <string name="pref_header_battleship">Battleship</string>
    <string name="pref_header_sudoku" translatable="false">Sudoku</string>
    <string name="pref_header_four_in_row">Four in a row</string>
    <string name="pref_header_dots_and_boxes">Dots and boxes</string>
    <string name="pref_header_bingo" translatable="false">Bingo</string>
    <string name="pref_header_checkers" translatable="false">Checkers</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_game_enable">Enable game-specific settings</string>
    <string name="favorite">Add to favorites</string>
    <string name="share">Share</string>
    <string name="pref_header_general">General</string>
    <string name="connect">Connect to host or game</string>
    <string name="highscores">View your highscores</string>
    <string name="transition_header">header_transition</string>
    <string name="transition_fab">fab_transition</string>
    <string name="transition_background">background_transition</string>
    <string name="name_battleship">Battleship</string>
    <string name="name_bingo" translatable="false">Bingo</string>
    <string name="name_dots_and_boxes">Dots and Boxes</string>
    <string name="name_sudoku" translatable="false">Sudoku</string>
    <string name="name_tic_tac_toe">Tic-Tac-Toe</string>
    <string name="name_four_in_row">Four in a Row</string>
    <string name="desc_battleship">Place your ships smartly on a grid, then take shots at your enemies until they\'ve lost all their ships.</string>
    <string name="desc_bingo">Are you the first to cross off all numbers from your card? Then you should shout Bingo!</string>
    <string name="desc_dots_and_boxes">Players take turns completing boxes by setting the fourth side of the square. May the best boxer win!</string>
    <string name="desc_sudoku">Sudoku is an easy to learn logic-based number placement puzzle, which you can now play with friends!</string>
    <string name="desc_tic_tac_toe">X or O? This is the ancient battle of Tic-Tac-Toe!</string>
    <string name="desc_four_in_row">Be the first to fill four spaces in a row.</string>
    <string name="title_activity_four_in_arow">FourInARow</string>
    <string name="name_checkers">Checkers</string>
    <string name="desc_checkers">The english draught version of checkers.</string>
    <string name="title_activity_battleship_setup">Battleship Setup</string>
    <string name="title_activity_battleship_game">Battleship</string>
    <string name="play_battleship">Play Battleship</string>
    <string name="finish_turn">Finish turn</string>
    <string name="clear_current_ship">Clear current ship</string>
    <string name="clear_all">Clear all</string>
    <string name="done_battleship">You have set up all your ships. You can reset from the toolbar or continue to the game.</string>
    <string name="play">Play</string>
    <string name="carrier">Carrier</string>
    <string name="battleship">Battleship</string>
    <string name="cruiser">Cruiser</string>
    <string name="submarine">Submarine</string>
    <string name="destroyer">Destroyer</string>
    <string name="should_finish_setup_battleship">You have not set up all your ships</string>
    <string name="view_opponent">View opponent\'s moves</string>
    <string name="opponent_done">opponentDone</string>
    <string name="peers_searching">Searching for peers…</string>
</resources>
