<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$TicTacToePreferenceFragment"
        android:title="@string/pref_header_tic_tac_toe" />

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$BattleshipPreferenceFragment"
        android:title="@string/pref_header_battleship" />

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$SudokuPreferenceFragment"
        android:title="@string/pref_header_sudoku" />

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$FourInRowPreferenceFragment"
        android:title="@string/pref_header_four_in_row" />

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$DotsAndBoxesPreferenceFragment"
        android:title="@string/pref_header_dots_and_boxes" />

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$BingoPreferenceFragment"
        android:title="@string/pref_header_bingo" />

    <header
        android:fragment="nl.verhoogenvansetten.gamrio.SettingsActivity$CheckersPreferenceFragment"
        android:title="@string/pref_header_checkers" />

</preference-headers>
