<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_battleship_enable"
        android:title="@string/pref_game_enable" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:dependency="pref_battleship_enable"
        android:defaultValue="light"
        android:entries="@array/pref_themes"
        android:entryValues="@array/pref_themes_values"
        android:key="pref_battleship_theme_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_theme" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:dependency="pref_battleship_enable"
        android:defaultValue="black"
        android:entries="@array/pref_text_colors"
        android:entryValues="@array/pref_text_colors_values"
        android:key="pref_battleship_text_color_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_text_color" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:dependency="pref_battleship_enable"
        android:defaultValue="small"
        android:entries="@array/pref_text_size"
        android:entryValues="@array/pref_text_size_values"
        android:key="pref_battleship_text_size_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_text_size" />

</PreferenceScreen>
