<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="nl.verhoogenvansetten.gamrio.GameDetailActivity"
    tools:ignore="MergeRootFrame" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                app:srcCompat="@drawable/battleship_header"
                android:id="@+id/iv_toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/game_header"
                android:transitionName="@string/transition_header" />

            <!-- <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/sheet_text_scrim_height_top"
                android:background="@drawable/scrim_top"
                app:layout_collapseMode="pin"/> -->

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/sheet_text_scrim_height_bottom"
                android:layout_gravity="bottom"
                android:layout_alignBottom="@+id/image"
                android:background="@drawable/scrim_bottom"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/game_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|right|end"
        android:translationZ="6dp" >

        <android.support.design.widget.FloatingActionButton
            android:contentDescription="@string/connect"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_open_network_white_24dp"
            android:transitionName="@string/transition_fab"
            android:stateListAnimator="@drawable/fab_lift_on_touch" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
